Fix names and lineup

--- a/credits.html
+++ b/credits.html
@@ -44,6 +44,7 @@
 								<h3>GORANA DANCE</h3>
 								<ul>
 									<li>Nicole Contreras</li>
+									<li>Mariya Dimitrova</li>
 									<li>Chavdar Dobranov</li>
 									<li>Evgeni Dobranov</li>
 									<li>Jianying Hu</li>
@@ -54,9 +55,8 @@
 									<li>Nadia Petkova</li>
 									<li>Venci Petkova</li>
 									<li>Emilia Pironkova</li>
-									<li>Maria Pironkova</li>
 									<li>Galina Saharova</li>
-									<li>Tina Stoyanova</li>
+									<li>Tsvetina Stoyanova</li>
 									<li>Guergana Stoyantcheva</li>
 									<li>Mihaela Stoyantcheva</li>
 								</ul>
@@ -106,14 +106,14 @@
 							<div class="content">
 								<h3>Musicians</h3>
 								<ul>
-									<li>Hristo Shehov</li>
 									<li>Lubomir Smilenov</li>
+									<li>Hristo Shehov</li>
 								</ul>
 							</div>
 						</article>
 						<article>
 							<div class="content">
-								<h3>Artistic Directory, Producer & Choreographer</h3>
+								<h3>Artistic Director, Producer & Choreographer</h3>
 								<ul>
 									<li>Elissaveta Iordanova</li>
 								</ul>
