--- a/lineup.html
+++ b/lineup.html
@@ -59,26 +59,26 @@
                             <h3>2. Комитско Либе (Komitsko Libe)</h3>
                             <p style="color:black;">A dance of commitment from the Pirin region in southwest Bulgaria.
                             </p>
-                            <p><i>Venci, Galina, Elena, Emilia, Inna, Chavdar</i></p>
+                            <p style="color:black;">Choreography by Kiril Haralampiev.</p>
+                            <p><i>Venci, Galina, Inna, Emilia, Elena, Chavdar</i></p>
                         </article>
                         <article>
                             <h3>3. Пирински (Pirinski)</h3>
                             <p style="color:black;">A female ritual dance from the Pirin region in southwest Bulgaria.
                             </p>
-                            <p><i>Venci, Galina, Elena, Emilia, Inna, Mihaela, Guergana, Tina, Iva, Jianying, Maria,
-                                    Nicole</i></p>
+                            <p><i>Emilia, Guergana, Galina, Tsvetina, Mihaela, Iva, Inna, Jianying, Elena, Mariya,
+                                    Venci, Nicole</i></p>
                         </article>
                         <article>
                             <h3>4. Гинка (Ginka)</h3>
                             <p style="color:black;">Ginka is a female name. This dance is common in Bulgaria and
-                                originates from the Pirin
-                                region.</p>
-                            <p><i>Evgeni, Tina, Jianying, Iva, Guergana, Maria, Nicole, Chavdar</i></p>
+                                originates from the Pirin region.</p>
+                            <p><i>Evgeni, Guergana, Iva, Tsvetina, Jianying, Mariya, Nicole, Chavdar</i></p>
                         </article>
                         <article>
                             <h3>5. Джангурица (Dzanguritsa)</h3>
                             <p style="color:black;">A common dance from the Pirin region in southwest Bulgaria.</p>
-                            <p><i>Stage left: Inna, Elena, Venci, Tina
+                            <p><i>Stage left: Inna, Elena, Venci, Tsvetina
                                     <br>
                                     Stage right: Galina, Emilia, Mihaela, Guergana</i></p>
                         </article>
@@ -96,9 +96,9 @@
                                 danced on Еньовден (Enyov
                                 Day / St. John's Eve). The wreaths are made from flowers and herbs believed to have a
                                 healing power.</p>
-                            <p><i>Stage left: Galina, Jianying, Nicole, Emilia, Maria, Iva
+                            <p><i>Stage left: Galina, Jianying, Nicole, Emilia, Mariya, Iva
                                     <br>
-                                    Stage right: Inna, Elena, Venci, Tina, Mihaela, Guergana</i></p>
+                                    Stage right: Inna, Elena, Venci, Tsvetina, Mihaela, Guergana</i></p>
                         </article>
                         <article>
                             <h3>8. Song from Lubomir Smilenov</h3>
@@ -125,26 +125,27 @@
                             <h3>11. Шира (Shira)</h3>
                             <p style="color:black;">A dance from Bulgaria's Danube (northern) region, referencing the
                                 Danube river that runs along the border with Romania.</p>
-                            <p><i>Evgeni, Nicole, Tina, Guergana, Emilia, Mihaela, Inna, Jianying, Maria, Elena,
+                            <p><i>Evgeni, Nicole, Tsvetina, Guergana, Emilia, Mihaela, Inna, Galina, Jianying, Mariya,
+                                    Elena,
                                     Venci</i></p>
                         </article>
                         <article>
                             <h3>12. Северняшка Сюита (Severniashkа Suite)</h3>
                             <p style="color:black;">A dance from Bulgaria's northern region ("severniashkа" translates
                                 to "northern").</p>
-                            <p><i>Stage left: Chavdar, Inna, Emilia, Tina, Mihaela
+                            <p><i>Stage left: Chavdar, Inna, Emilia, Tsvetina, Mihaela
                                     <br>
                                     Stage right: Venci, Galina, Elena, Guergana</i></p>
                         </article>
                         <article>
-                            <h3>13. Songs from Petya Maglova-Shehova</h3>
+                            <h3>13. Songs from Petya Maglova-Shehova and Hristo Shehov</h3>
                             <ul>
                                 <li style="color:black;">Мъри Маро (Muri Maro)</li>
                                 <li style="color:black;">А бре юначе (Oh young man)</li>
                             </ul>
                         </article>
                         <article>
-                            <h3>14. Songs from Hristo Shehov & Petya Maglova-Shehova</h3>
+                            <h3>14. Songs from Hristo Shehov, Petya Maglova-Shehova & Lubomir Smilenov</h3>
                             <ul>
                                 <li style="color:black;">Руфинка болна легнала (Rufinka went to bed sick)</li>
                                 <li style="color:black;">Айде Калино да идем (Come on Kalino, let's go)</li>
@@ -159,7 +160,8 @@
                             </p>
                             <p style="color:black;">This song is from the Philip Kutev National Folklore Ensemble and
                                 belongs to The Golden Collection of Bulgarian Folk Heritage.</p>
-                            <p><i>Venci, Elena, Galina, Tina, Inna, Emilia, Guergana, Jianying, Mihaela, Chavdar
+                            <p style="color:black;">Choreography by Margarita Dikova.</p>
+                            <p><i>Venci, Elena, Galina, Tsvetina, Inna, Emilia, Guergana, Jianying, Mihaela, Chavdar
                                 </i></p>
                         </article>
                         <article>
@@ -173,7 +175,7 @@
                             <p style="color:black;">A dance from Varna, a city on the Black Sea.</p>
                             <p><i>Stage left: Inna, Guergana, Mihaela, Jianying, Chavdar, Evgeni
                                     <br>
-                                    Stage right: Emilia, Tina, Maria, Nicole
+                                    Stage right: Emilia, Tsvetina, Mariya, Nicole
                                 </i></p>
                         </article>
                         <article>
@@ -187,22 +189,22 @@
                             <p style="color:black;">A dance from Sadovo, a village in midsouthern Bulgaria close to
                                 Plovdiv. "Krivo"
                                 translates to "crooked".</p>
-                            <p><i>Chavdar, Venci, Elena, Tina, Mihaela, Emilia, Galina, Inna</i></p>
+                            <p><i>Chavdar, Venci, Elena, Tsvetina, Mihaela, Emilia, Galina, Inna</i></p>
                         </article>
                         <article>
                             <h3>20. Енино (Enino)</h3>
                             <p style="color:black;">A dance from the Rodopi mountains in midsouthern Bulgaria.</p>
-                            <p><i>1<sup>st</sup> row: Venci, Galina, Elena, Inna, Mihaela, Tina
+                            <p><i>1<sup>st</sup> row: Venci, Galina, Elena, Inna, Mihaela, Tsvetina
                                     <br>
-                                    2<sup>nd</sup> row: Emilia, Guergana, Jianying, Maria, Nicole
+                                    2<sup>nd</sup> row: Emilia, Guergana, Jianying, Mariya, Nicole
                                     <br>
-                                    Final row: Chavdar, Evgeni
+                                    Chavdar, Evgeni
                                 </i></p>
                         </article>
                         <article>
                             <h3>21. Бучимиш (Buchimish)</h3>
                             <p style="color:black;">A dance from western Bulgaria.</p>
-                            <p><i>Stage left: Elena, Guergana, Tina, Galina, Inna, Evgeni
+                            <p><i>Stage left: Elena, Guergana, Tsvetina, Galina, Inna, Evgeni
                                     <br>
                                     Stage right: Venci, Misha, Chavdar
                                 </i></p>
@@ -240,17 +242,17 @@
                         <article>
                             <h3>26. Йовино (Yovino)</h3>
                             <p style="color:black;">A dance from the Shopski region in western Bulgaria.</p>
-                            <p><i>Stage left: Venci, Elena, Jianying, Tina, Maria
+                            <p><i>Stage left: Tsvetina, Venci, Elena, Jianying, Mariya, Nicole
                                     <br>
-                                    Stage right: Evgeni, Emilia, Mihaela, Guergana, Nicole
+                                    Stage right: Evgeni, Emilia, Mihaela, Guergana
                                 </i></p>
                         </article>
                         <article>
                             <h3>27. Петрунино (Petrunino)</h3>
                             <p style="color:black;">A dance from the Shopski region in western Bulgaria.</p>
-                            <p><i>Stage left: Mihaela, Guergana, Tina, Maria, Nicole, Chavdar, Evgeni
+                            <p><i>Stage left: Inna, Guergana, Mihaela, Chavdar, Evgeni
                                     <br>
-                                    Stage right: Venci, Galina, Elena, Emilia, Inna
+                                    Stage right: Tsvetina, Mariya, Nicole
                                 </i></p>
                         </article>
                         <article>
@@ -265,17 +267,16 @@
                             <h3>29. Великден (Velikden)</h3>
                             <p style="color:black;">A dance performed as an Easter ritual ("Velikden" translates to
                                 Easter).</p>
-                            <p><i>Venci, Galina, Elena, Emilia, Inna, Mihaela, Guergana, Tina, Jianying, Maria, Nicole,
-                                    Chavdar, Evgeni
-                                </i></p>
+                            <p><i>Venci, Galina, Elena, Emilia, Inna, Mihaela, Guergana, Tsvetina, Jianying, Mariya,
+                                    Nicole, Chavdar, Evgeni</i></p>
                         </article>
                         <article>
                             <h3>30. Край Шоплука (Kray Shopluka)</h3>
                             <p style="color:black;">A dance from the Shopski region in western Bulgaria, close to the
                                 capital of Sofia.</p>
-                            <p><i>1<sup>st</sup> row: Evgeni, Venci, Elena, Tina, Inna, Mihaela
+                            <p><i>1<sup>st</sup> row: Evgeni, Venci, Elena, Tsvetina, Inna, Mihaela
                                     <br>
-                                    2<sup>nd</sup> row: Chavdar, Emilia, Guergana, Iva, Jianying, Maria, Nicole
+                                    2<sup>nd</sup> row: Chavdar, Emilia, Guergana, Iva, Jianying, Mariya, Nicole
                                 </i></p>
                         </article>
                         <article>
