--- a/about-gorana.html
+++ b/about-gorana.html
@@ -55,6 +55,7 @@
                     <ul>
                         <li>Cvetelina Atanasova</li>
                         <li>Nicole Contreras</li>
+                        <li>Mariya Dimitrova</li>
                         <li>Chavdar Dobranov</li>
                         <li>Evgeni Dobranov</li>
                         <li>Lily Grantcharova</li>
@@ -66,9 +67,8 @@
                         <li>Nadia Petkova</li>
                         <li>Venci Petkova</li>
                         <li>Emilia Pironkova</li>
-                        <li>Maria Pironkova</li>
                         <li>Galina Saharova</li>
-                        <li>Tina Stoyanova</li>
+                        <li>Tsvetina Stoyanova</li>
                         <li>Guergana Stoyantcheva</li>
                         <li>Mihaela Stoyantcheva</li>
                         <li>Petya Yankova</li>
