Overhaul for Roses Across The Sea

--- a/about-gorana.html
+++ b/about-gorana.html
@@ -62,7 +62,10 @@
                         <li>Jianying Hu</li>
                         <li>Elissaveta Iordanova</li>
                         <li>Iva Iordanova</li>
+                        <li>Assia Mihov</li>
+						<li>Hristo Mihovski</li>
                         <li>Elena Miteva</li>
+                        <li>Andre Moutafov</li>
                         <li>Inna Ognianova-Chorlev</li>
                         <li>Nadia Petkova</li>
                         <li>Venci Petkova</li>
@@ -71,7 +74,7 @@
                         <li>Tsvetina Stoyanova</li>
                         <li>Guergana Stoyantcheva</li>
                         <li>Mihaela Stoyantcheva</li>
-                        <li>Petya Yankova</li>
+                        <li>Gannie Tzoneva</li>
                     </ul>
                 </section>
 
@@ -108,26 +111,36 @@
             <div class="inner">
 
                 <!-- Menu -->
-                <nav id="menu">
-                    <header class="major">
-                        <h2>Menu</h2>
-                    </header>
-                    <ul>
-                        <li><a href="index.html">Orenda Homepage</a></li>
-                        <li><a href="lineup.html">Orenda Line Up</a></li>
-                        <li><a href="credits.html">Orenda Credits</a></li>
-                        <li>
-                            <span class="opener">About</span>
-                            <ul>
-                                <li><a href="about-gorana.html">Gorana Dance</a></li>
-                                <li><a href="about-algara.html">Algara Dance</a></li>
-                                <li><a href="about-guest-artists.html">Guest Artists</a></li>
-                            </ul>
-                        </li>
-                        <li><a href="gallery.html">Gallery</a></li>
-                        <li><a href="trailers.html">Trailers</a></li>
-                    </ul>
-                </nav>
+				<nav id="menu">
+					<header class="major">
+						<h2>Menu</h2>
+					</header>
+					<ul>
+						<li>
+							<span class="opener">Roses Across The Sea</span>
+							<ul>
+								<li><a href="index.html">Concert Information</a></li>
+								<li><a href="program.html">Program</a></li>
+								<li><a href="credits.html">Credits</a></li>
+							</ul>
+						</li>
+						<li>
+							<span class="opener">About</span>
+							<ul>
+								<li><a href="about-gorana.html">Gorana Dance</a></li>
+								<li><a href="about-algara.html">Algara Dance</a></li>
+							</ul>
+						</li>
+						<li><a href="gallery.html">Gallery</a></li>
+						<li><a href="trailers.html">Trailers</a></li>
+						<li>
+							<span class="opener">Past Concerts</span>
+							<ul>
+								<li><a href="orenda.html">Orenda: The Collective Power</a></li>
+							</ul>
+						</li>
+					</ul>
+				</nav>
 
                 <!-- Section -->
                 <section>
