--- a/index.html
+++ b/index.html
@@ -29,43 +29,79 @@
 				</header>
 
 				<!-- Banner -->
-				<section id="banner">
-					<div class="content">
-						<header>
-							<h1>Orenda:&nbsp;<br>The Collective Power</h1>
-							<!-- <p>A free and fully responsive site template</p> -->
-						</header>
-						<p>
-							Orenda: The Collective Power is a concert showcasing the beauty of traditional Bulgarian
-							heritage, vibrant folk dances and popular folk songs. This concert is a celebration of the
-							<strong>15<sup>th</sup> Anniversary of GORANA DANCE</strong>, and features 30 dancers and 8
-							singers / musicians.
-						</p>
-						<p>
-							Orenda is the Iroquois name for a certain spiritual energy inherent to people and their
-							environment. It exists in other cultures by different names, like Prana, Mana or Chi. It can
-							be felt and experienced in cultural traditions that connect us to our ancestral roots, and
-							is an extraordinary, invisible power believed to be transmissible between people by music,
-							songs and dance.
-						</p>
-						<h3>Date:</h3>
-						<p>May 22, 2022 (5:00 PM - 7:00 PM)</p>
-						<h3>Location:</h3>
-						<p>Manhattan Movement and Arts
-							Center
-							<br>
-							(248 W 60<sup>th</sup> St, New York, NY 10023)
-						</p>
+				<section>
 
-						<ul class="actions fit">
-							<li><a href="https://gorana-international-folk-dance-festival.ticketbud.com/orenda-the-collective-power"
-									target="_blank" class="button primary fit">Get tickets</a></li>
-							<li><a href="lineup.html" class="button primary fit">See the line up</a></li>
-						</ul>
+					<div class="row">
+
+						<div class="col-6 col-12-small">
+							<h1>Roses Across The Sea</h1>
+							<p>
+								<br>
+								<strong>Roses Across The Sea</strong> is a live performance of Bulgarian and Georgian folk dances as
+								part of the 6<sup>th</sup> GORANA International Dance festival. The rose is the national flower of both
+								Bulgaria and Georgia, as well as the state flower of New York. Roses will be an integrative part of
+								the performance as decoration and props in some dances.
+							</p>
+							<blockquote>
+								It might well be said of this beautiful flower, that nature has exhausted herself in trying to lavish on
+								it the freshness of beauty, form, perfume, brilliancy, and grace. <br>
+								<div style="text-align: right;">— Charlotte de la Tour</div>
+							</blockquote>
+							<p>
+								In everything from mythology and literature to religion and politics, the rose has been prized for its beauty
+								and continues to be strongly associated as the most symbolically rich flower. The red rose is the queen of all
+								roses with its symbolism for passion, deep desire and romantic love going back to ancient times. The white rose is
+								associated with reverence, truth and new beginnings like marriage. The pink rose is associated with admiration,
+								gentleness, elegance, sweetness and happiness.
+							</p>
+							<p>
+								In Bulgaria, the rose is often found in embroideries and local art. Every June, local Bulgarian communities in
+								the Rose Valley organize the Rose Festival with the Rose Queen contest. On the coronation day, the whole city
+								flows to the streets where the Rose Parade is held. A group of men carry the Rose Queen who is wreathed in
+								pink and showers guests with petals. As a rule, the holiday ends in the late evening with a big "horo" line dance
+								in which everyone takes part.
+							</p>
+							<p>
+								<i>Thank you to the Lower Manhattan Cultural Council Creative Engagement funds, Tianaderrah Foundation,
+								and private donors for the great support in the past 5 years!</i>
+							</p>
+							
+						</div>
+
+						<div class="col-6 col-12-small" style="display:flex; align-items: center;">
+							<img src="images/rose.jpg" style="max-width:60%; margin-left: auto; margin-right: auto; margin-bottom: 40px;" alt="" />
+							<p>&nbsp;</p>
+						</div>
+
+						<div class="col-12" style="text-align:center;">
+							<h3>Date:</h3>
+							<p>Sunday, October 22, 2023 (4:00 PM - 5:30 PM)</p>
+							<h3>Location:</h3>
+							<p>
+								<a href="https://maps.app.goo.gl/hdrkrJMyk3yKgsSB9">
+									Marlene Meyerson JCC Manhattan
+									<br>
+									(334 Amsterdam Ave, New York, NY 10023)
+								</a>
+							</p>
+						</div>
+
+						<div class="col-4 col-12-medium"></div>
+						<div class="col-4 col-12-medium">
+							<ul class="actions fit">
+								<li>
+									<a href="https://gorana-international-folk-dance-festival.ticketbud.com/gorana-sixth-int-l-dance-festival-roses-across-the-sea-"
+										target="_blank" class="button primary fit">Get tickets</a>
+								</li>
+								<li>
+									<a href="program.html" class="button primary fit">See the program</a>
+								</li>
+							</ul>
+						</div>
+						<div class="col-4 col-12-medium"></div>
+
 					</div>
-					<span class="image object profile0">
-						<img src="images/gorana1.jpg" alt="" />
-					</span>
+
 				</section>
 
 				<!-- Banner -->
@@ -76,9 +112,9 @@
 							<h4><i>Artistic Director, Producer & Choreographer</i></h4>
 						</header>
 						<p>
-							Each performer in Orenda holds a passion, in his or her own way, for exploring the new
-							meanings and relevance of traditional practices in our contemporary world thousands of miles
-							away from Bulgaria.
+							Each performer in Roses Across The Sea holds a passion, in his or her own way, for exploring
+							the new meanings and relevance of traditional practices in our contemporary world thousands
+							of miles away from Bulgaria.
 						</p>
 						<p>
 							On a professional level, we look for interdisciplinary links. On a personal level, we see
@@ -104,19 +140,29 @@
 						<h2>Menu</h2>
 					</header>
 					<ul>
-						<li><a href="index.html">Orenda Homepage</a></li>
-						<li><a href="lineup.html">Orenda Line Up</a></li>
-						<li><a href="credits.html">Orenda Credits</a></li>
+						<li>
+							<span class="opener">Roses Across The Sea</span>
+							<ul>
+								<li><a href="index.html">Concert Information</a></li>
+								<li><a href="program.html">Program</a></li>
+								<li><a href="credits.html">Credits</a></li>
+							</ul>
+						</li>
 						<li>
 							<span class="opener">About</span>
 							<ul>
 								<li><a href="about-gorana.html">Gorana Dance</a></li>
 								<li><a href="about-algara.html">Algara Dance</a></li>
-								<li><a href="about-guest-artists.html">Guest Artists</a></li>
 							</ul>
 						</li>
 						<li><a href="gallery.html">Gallery</a></li>
 						<li><a href="trailers.html">Trailers</a></li>
+						<li>
+							<span class="opener">Past Concerts</span>
+							<ul>
+								<li><a href="orenda.html">Orenda: The Collective Power</a></li>
+							</ul>
+						</li>
 					</ul>
 				</nav>
 
