--- a/credits.html
+++ b/credits.html
@@ -32,7 +32,7 @@
 				<section id="banner">
 					<div class="content">
 						<header>
-							<h1>Orenda Credits</h1>
+							<h1>Credits</h1>
 						</header>
 				</section>
 
@@ -43,14 +43,16 @@
 							<div class="content">
 								<h3>GORANA DANCE</h3>
 								<ul>
-									<li>Nicole Contreras</li>
 									<li>Mariya Dimitrova</li>
 									<li>Chavdar Dobranov</li>
 									<li>Evgeni Dobranov</li>
+									<li>Angelike Glogov</li>
 									<li>Jianying Hu</li>
 									<li>Elissaveta Iordanova (Choreographer)</li>
-									<li>Iva Iordanova</li>
+									<li>Assia Mihov</li>
+									<li>Hristo Mihovski</li>
 									<li>Elena Miteva</li>
+									<li>Andre Moutafov</li>
 									<li>Inna Ognianova-Chorlev</li>
 									<li>Nadia Petkova</li>
 									<li>Venci Petkova</li>
@@ -59,57 +61,47 @@
 									<li>Tsvetina Stoyanova</li>
 									<li>Guergana Stoyantcheva</li>
 									<li>Mihaela Stoyantcheva</li>
+									<li>Gannie Tzoneva</li>
 								</ul>
 							</div>
 						</article>
 						<article>
 							<div class="content">
-								<h3>Algara Folk Dance Group</h3>
+								<h3>Dancing Crane Georgian Dance</h3>
 								<ul>
-									<li>Maria Bonevelly</li>
-									<li>Albena Chernaeva</li>
-									<li>Vessela Djogova</li>
-									<li>Virginiya Grigorova</li>
-									<li>Bisera Iliev</li>
-									<li>Krasimira Mladenova</li>
-									<li>Galina Natchev</li>
-									<li>Vessela Patchedjieva</li>
-									<li>Maria Rosenberg</li>
-									<li>Galina Saharova (Choreographer)</li>
-									<li>Iskra Simidchieva</li>
-									<li>Ioana Spiridonov</li>
-									<li>Toska Stoianova</li>
-									<li>Kalina Todorova-Suarez</li>
-									<li>Tanya Vergieva</li>
-									<li>Spassena Yantchev</li>
+									<li>IIlia Svianaidze</li>
+									<li>Levan Torchinava</li>
+									<li>Malkhaz Shubitidze</li>
+									<li>Tengo Qobalia</li>
+									<li>Irakli Parcvania</li>
+									<li>Nana Davitadze</li>
+									<li>Sofiko Alania</li>
+									<li>Tamar Tsivilashvili</li>
+									<li>Natali Dabrundashvili</li>
+									<li>Keso Golitiani</li>
+									<li>Elene Machavariani</li>
+								</ul>
+
+								<h5>&nbsp;</h5>
+
+								<h3>Costumes & Props</h3>
+								<ul>
+									<li>Emilia Pironkova (Large Wreath Design & Production)</li>
+									<li>Elissaveta Iordanova (Head Decor)</li>
+									<li>Galina Saharova (Head Decor)</li>
 								</ul>
 							</div>
 						</article>
+
 						<article>
 							<div class="content">
-								<h3>Singers</h3>
+								<h3>Singer</h3>
 								<ul>
-									<li>Petya Maglova-Shehova</li>
-									<li>Hristo Shehov</li>
-								</ul>
-								<p style="margin:0 0 0 0; color:black; font-weight:bold;">Yasna Voices:</p>
-								<ul>
-									<li>Vlada Tomova (Director)</li>
-									<li>Annie Beliveau</li>
-									<li>Barbara Elting</li>
-									<li>Larkin Grimm</li>
+									<li>Sofiko Alania</li>
 								</ul>
 							</div>
 						</article>
-						<article>
-							<div class="content">
-								<h3>Musicians</h3>
-								<ul>
-									<li>Lubomir Smilenov</li>
-									<li>Hristo Shehov</li>
-								</ul>
-							</div>
-						</article>
+
 						<article>
 							<div class="content">
 								<h3>Artistic Director, Producer & Choreographer</h3>
@@ -118,22 +110,43 @@
 								</ul>
 							</div>
 						</article>
+
 						<article>
 							<div class="content">
 								<h3>Stage Manager</h3>
 								<ul>
-									<li>Julieta Okot</li>
+									<li>Iva Iordanova</li>
 								</ul>
 							</div>
 						</article>
+
 						<article>
 							<div class="content">
-								<h3>Sound and Light</h3>
+								<h3>House Managers</h3>
 								<ul>
-									<li>Shino Frances</li>
+									<li>Aneta Genova</li>
 								</ul>
 							</div>
 						</article>
+
+						<article>
+							<div class="content">
+								<h3>AV Director</h3>
+								<ul>
+									<li>Matt Temkin</li>
+								</ul>
+							</div>
+						</article>
+
+						<article>
+							<div class="content">
+								<h3>Stage & Technical Assistant</h3>
+								<ul>
+									<li>Lily Grantcharova</li>
+								</ul>
+							</div>
+						</article>
+
 						<article>
 							<div class="content">
 								<h3>Photography</h3>
@@ -142,53 +155,16 @@
 								</ul>
 							</div>
 						</article>
+
 						<article>
 							<div class="content">
-								<h3>Videography</h3>
+								<h3>Videographer & Video Editor</h3>
 								<ul>
-									<li>Alvin Caal</li>
+									<li>Oscar Heredia / Novastar Media</li>
 								</ul>
 							</div>
 						</article>
-						<article>
-							<div class="content">
-								<h3>Video Editing</h3>
-								<ul>
-									<li>Manuel Ibanez</li>
-								</ul>
-							</div>
-						</article>
-						<article>
-							<div class="content">
-								<h3>House Managers</h3>
-								<ul>
-									<li>Margarita Markova</li>
-									<li>Aneta Genova</li>
-								</ul>
-							</div>
-						</article>
-						<article>
-							<div class="content">
-								<h3>Technical Support Assistant</h3>
-								<ul>
-									<li>Lily Grantcharova</li>
-								</ul>
-							</div>
-						</article>
-						<article>
-							<div class="content">
-								<h3>Costumes / Props</h3>
-								<ul>
-									<li>Lily Grantcharova (Costume Assistant)</li>
-									<li>Emilia Pironkova (Large Wreath Design & Production)</li>
-									<li>Guergana Stoyantcheva (Small Head Wreath Decor)</li>
-									<li>Elissaveta Iordanova (Head Decor)</li>
-									<li>Galina Saharova (Head Decor)</li>
-								</ul>
-								<p><i>Special thank you to the Hristo Botev Bulgarian school for allowing us to use some
-										of their costumes.</i></p>
-							</div>
-						</article>
+						
 						<article>
 							<div class="content">
 								<h3>Website</h3>
@@ -222,19 +198,29 @@
 						<h2>Menu</h2>
 					</header>
 					<ul>
-						<li><a href="index.html">Orenda Homepage</a></li>
-						<li><a href="lineup.html">Orenda Line Up</a></li>
-						<li><a href="credits.html">Orenda Credits</a></li>
+						<li>
+							<span class="opener">Roses Across The Sea</span>
+							<ul>
+								<li><a href="index.html">Concert Information</a></li>
+								<li><a href="program.html">Program</a></li>
+								<li><a href="credits.html">Credits</a></li>
+							</ul>
+						</li>
 						<li>
 							<span class="opener">About</span>
 							<ul>
 								<li><a href="about-gorana.html">Gorana Dance</a></li>
 								<li><a href="about-algara.html">Algara Dance</a></li>
-								<li><a href="about-guest-artists.html">Guest Artists</a></li>
 							</ul>
 						</li>
 						<li><a href="gallery.html">Gallery</a></li>
 						<li><a href="trailers.html">Trailers</a></li>
+						<li>
+							<span class="opener">Past Concerts</span>
+							<ul>
+								<li><a href="orenda.html">Orenda: The Collective Power</a></li>
+							</ul>
+						</li>
 					</ul>
 				</nav>
 
