--- a/program.html
+++ b/program.html
@@ -32,30 +32,76 @@
                 <section id="banner">
                     <div class="content">
                         <header>
-                            <h1>Program Line Up</h1>
+                            <h1>Program</h1>
                         </header>
                         <div>
-                            <p><i>All dancers are listed in order of appearance in italics.</i></p>
+                            <!-- <p><i>All dancers are listed in order of appearance in italics.</i></p> -->
                         </div>
                 </section>
 
-                <!-- Banner -->
-                <section id="bannerlineup">
-                    <div class="content">
-                        <h3>1. Самодива (Samodiva)</h3>
-                        <p style="color:black;">A samodiva is a woodland fairy or nymph, with spiritual energy drawn
-                            from nature.</p>
-                        <p><i>Nadia (Solo)</i></p>
-                    </div>
-                    <span class="image object">
-                        <img src="images/nadia.jpg" alt="" />
+                <!-- Content -->
+                <section>
+                    <header class="main">
+                        <h2>About The Ensembles & Artists</h2>
+                    </header>
+                    
+                    <header>
+                        <h3>Gorana Dance</h3>
+                    </header>
+                    <p>
+                        Elissaveta Iordanova established ELEA GORANA DANCE COLLECTIVE more than 16 years
+                        ago with the mission to preserve Bulgarian folk heritage and to present its beauty
+                        through dance, music, rituals and unique costumes. EGDC's goal is to be a cultural
+                        ambassador of Bulgaria in the US.
+                    </p>
+                    <span class="image main">
+                        <img src="images/gorana2.jpg" style="max-width:1000px; margin-left:auto; margin-right: auto;" alt="" />
                     </span>
+
+                    <header>
+                        <h3>Dancing Crane</h3>
+                    </header>
+                    <p>
+                        Dancing Crane is an ensemble which includes professional dancers who have learned and
+                        performed since childhood in the country of Georgia. Their performances present a program
+                        of the regional dances of Georgia in various regional costumes. Victor Sirelson is a
+                        researcher of ethnic dance and music. He became involved with the study of Georgian dance
+                        and formed a collaboration with Merab Tsereteli, a dancer with the Sukhishvili Ensemble
+                        in Georgia.
+                    </p>
+                    <span class="image main">
+                        <img src="images/dancing-crane.jpg" style="max-width: 1000px; margin-left:auto; margin-right: auto;" alt="" />
+                    </span>
+                    <header>
+                        <h3>Sofiko Alania</h3>
+                    </header>
+                    <p>
+                        Sofiko is a singer, choreographer, dancer and performer of traditional Georgian songs and
+                        dances. She has participated in many festivals and competitions in both Georgia and the US.
+                        She currently teaches Georgian folk dance and singing in New York City.
+                    </p>
+                    <span class="image main">
+                        <img src="images/sofiko.jpg" style="max-width: 800px; margin-left:auto; margin-right: auto;" alt="" />
+                    </span>
+                </section>
+
+                 <!-- Content -->
+                 <section id="banner">
+                    <div class="content">
+                        <header>
+                            <h2>Line Up</h2>
+                        </header>
+                        <div>
+                            <p><i>Coming soon.</i></p>
+                            <!-- <p><i>All dancers are listed in order of appearance in italics.</i></p> -->
+                        </div>
+                    </div>
                 </section>
 
                 <!-- Section -->
                 <section>
                     <div class="posts">
-                        <article>
+                        <!-- <article>
                             <h3>2. Комитско Либе (Komitsko Libe)</h3>
                             <p style="color:black;">A dance of commitment from the Pirin region in southwest Bulgaria.
                             </p>
@@ -283,7 +329,7 @@
                             <h3></h3>
                             <p style="color:black;"></p>
                             <p><i></i></p>
-                        </article>
+                        </article> -->
                     </div>
                 </section>
 
@@ -295,26 +341,36 @@
             <div class="inner">
 
                 <!-- Menu -->
-                <nav id="menu">
-                    <header class="major">
-                        <h2>Menu</h2>
-                    </header>
-                    <ul>
-                        <li style="color:black;"><a href="index.html">Orenda Homepage</a></li>
-                        <li style="color:black;"><a href="lineup.html">Orenda Line Up</a></li>
-                        <li style="color:black;"><a href="credits.html">Orenda Credits</a></li>
-                        <li style="color:black;">
-                            <span class="opener">About</span>
-                            <ul>
-                                <li><a href="about-gorana.html">Gorana Dance</a></li>
-                                <li><a href="about-algara.html">Algara Dance</a></li>
-                                <li><a href="about-guest-artists.html">Guest Artists</a></li>
-                            </ul>
-                        </li>
-                        <li style="color:black;"><a href="gallery.html">Gallery</a></li>
-                        <li style="color:black;"><a href="trailers.html">Trailers</a></li>
-                    </ul>
-                </nav>
+				<nav id="menu">
+					<header class="major">
+						<h2>Menu</h2>
+					</header>
+					<ul>
+						<li>
+							<span class="opener">Roses Across The Sea</span>
+							<ul>
+								<li><a href="index.html">Concert Information</a></li>
+								<li><a href="program.html">Program</a></li>
+								<li><a href="credits.html">Credits</a></li>
+							</ul>
+						</li>
+						<li>
+							<span class="opener">About</span>
+							<ul>
+								<li><a href="about-gorana.html">Gorana Dance</a></li>
+								<li><a href="about-algara.html">Algara Dance</a></li>
+							</ul>
+						</li>
+						<li><a href="gallery.html">Gallery</a></li>
+						<li><a href="trailers.html">Trailers</a></li>
+						<li>
+							<span class="opener">Past Concerts</span>
+							<ul>
+								<li><a href="orenda.html">Orenda: The Collective Power</a></li>
+							</ul>
+						</li>
+					</ul>
+				</nav>
 
                 <!-- Section -->
                 <section>
